--- a/index.html
+++ b/index.html
@@ -70,20 +70,22 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top" id="xx">Fábio Morais</a>
+    <div class="container ">
+      <a class="navbar-brand js-scroll-trigger " href="#page-top" id="xx">Fábio Morais</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
         type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
         aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+      <div class="collapse navbar-collapse  " id="navbarResponsive">
+        <ul class="navbar-nav ml-auto ">
+
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger fas fa-address-card" href="#about"> &nbsp;
               About</a>
           </li>
+
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger fas fa-star" href="#skills"> &nbsp;
               Skills</a>
@@ -164,22 +166,24 @@
         </div>
         <div class="col-lg-5 mr-auto">
           <ul style="list-style-type:square;" id="ulAbout">
-            <li>My main interest areas are software engineering, computer science, web developer and computer vision</li>
+            <li>My main interest areas are software engineering, computer science, web developer and computer vision.</li>
 
             <li id="liAbout">Passionate about technology, automative industry, robotics and programming.</li>
+            <li id="liAbout">Reading finnance books is one of my hobbies.</li>
+
           </ul>
         </div>
       </div>
     </div>
 
-    <!-- EDUCATION-->
+    <!-- EXPERIENCE-->
     <div class="container page-section">
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0 ">Education</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0 ">Experience</h2>
       <!-- Icon Divider -->
       <div class="divider-custom ">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-graduation-cap"></i>
+          <i class="fas fa-briefcase"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -187,21 +191,6 @@
 
       <div class="col-lg-10  offset-lg-1">
         <ul class="timeline">
-          <li>
-            <div class="timeline-badge sport"></div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4 class="timeline-title">Faculty of Sports of the University of Porto</h4>
-                <a class="text-muted font-weight-bold "><i class="far fa-calendar-alt"></i> 2015-2016</a>
-              </div>
-              <div class="timeline-body">
-                <h3 class="title "><a class="linkEducation"
-                    href="https://sigarra.up.pt/fadeup/en/CUR_GERAL.CUR_PLANOS_ESTUDOS_VIEW?pv_plano_id=3132&pv_ano_lectivo=2019&pv_tipo_cur_sigla=L&pv_origem=CUR"
-                    style="text-decoration: none" target="_blank">
-                    Sport Science</a></h3>
-              </div>
-            </div>
-          </li>
           <li class="timeline-inverted">
             <div class="timeline-badge electro"></div>
             <div class="timeline-panel">
@@ -222,12 +211,67 @@
               <div class="timeline-heading">
                 <h4 class="timeline-title">Faculty of Engineering of the University of Porto</h4>
                 <time class="text-muted font-weight-bold"><i class="far fa-calendar-alt"></i> 2017-2021</time>
+                
               </div>
               <div class="timeline-body">
                 <h3 class="title"><a class="linkEducation"
                     href="https://sigarra.up.pt/feup/en/CUR_GERAL.CUR_PLANOS_ESTUDOS_VIEW?pv_plano_id=2639&pv_tipo_cur_sigla=&pv_origem=CUR&pv_ano_lectivo=2018"
                     style="text-decoration: none" target="_blank">
                     Electrical and Computer Engineering</a></h3>
+                <h6 class="text-right"> <i class="fas fa-graduation-cap"></i>Master Degree</h6> 
+
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+
+    <!-- EDUCATION-->
+    <div class="container page-section">
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0 ">Education</h2>
+      <!-- Icon Divider -->
+      <div class="divider-custom ">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <i class="fas fa-graduation-cap"></i>
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+
+      <div class="col-lg-10  offset-lg-1">
+        <ul class="timeline">
+          <li class="timeline-inverted">
+            <div class="timeline-badge electro"></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">Superior Institute of Engineering of Porto</h4>
+                <time class="text-muted font-weight-bold"><i class="far fa-calendar-alt"></i> 2016-2017</time>
+              </div>
+              <div class="timeline-body">
+                <h3 class="title"><a class="linkEducation" href="https://www.isep.ipp.pt/Course/Course/23"
+                    style="text-decoration: none" target="_blank">
+                    Electrical and Computer Engineering</a></h3>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-badge electro"></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title">Faculty of Engineering of the University of Porto</h4>
+                <time class="text-muted font-weight-bold"><i class="far fa-calendar-alt"></i> 2017-2021</time>
+                
+              </div>
+              <div class="timeline-body">
+                <h3 class="title"><a class="linkEducation"
+                    href="https://sigarra.up.pt/feup/en/CUR_GERAL.CUR_PLANOS_ESTUDOS_VIEW?pv_plano_id=2639&pv_tipo_cur_sigla=&pv_origem=CUR&pv_ano_lectivo=2018"
+                    style="text-decoration: none" target="_blank">
+                    Electrical and Computer Engineering</a></h3>
+                <h6 class="text-right"> <i class="fas fa-graduation-cap"></i>Master Degree</h6> 
+
               </div>
             </div>
           </li>
@@ -633,7 +677,7 @@
                 <h5><br>Warehouse Manager</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/wm2.PNG" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/wm2.png" alt="" id="project_img">
           </div>
         </div>
          <!-- Portfolio Item 14 -->
@@ -646,7 +690,7 @@
                 <h5><br>MES</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/wm.PNG" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/wm2.png" alt="" id="project_img">
           </div>
         </div>
         <!-- Portfolio Item 3 -->
@@ -673,7 +717,7 @@
                 <h5><br>Hydroponic greenhouse</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/estufa2.PNG" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/estufa2.png" alt="" id="project_img">
           </div>
         </div>
 
@@ -687,7 +731,7 @@
                 <h5><br>Smart Controller</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/smart12.PNG" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/smart12.png" alt="" id="project_img">
           </div>
         </div>
 
@@ -730,7 +774,7 @@
                 <h5><br>Quiz for CMD</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/quiz12.PNG" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/quiz12.png" alt="" id="project_img">
           </div>
         </div>
         <!-- Portfolio Item 10 -->
@@ -783,7 +827,7 @@
                 <h5><br>Insta Bot</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/instabot2.PNG" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/instabot2.png" alt="" id="project_img">
           </div>
         </div>
         <!-- Portfolio Item 16 -->
@@ -796,7 +840,7 @@
                 <h5><br>Computer Graphics</h5>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/graphic2.PNG" alt="" id="project_img">
+            <img class="img-fluid" src="img/portfolio/graphic2.png" alt="" id="project_img">
           </div>
         </div>
 
@@ -875,7 +919,8 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; Fábio Morais 2019</small>
+      <small>Copyright &copy; Fábio Morais <script>document.write(new Date().getFullYear())</script>
+      </small>
     </div>
   </section>
 
@@ -1704,7 +1749,7 @@
                 <!-- Portfolio Modal - Text -->
                 <div>
                   <p id="language"><b>Language </b>Java (user interface) / Python with Selenium</p>
-                  <p id="textNormal">A simple bot
+                  <p id="textNormal">A simple instagram bot with user interface.
                   </p>
                   <p id="textNormal"><b>Features:</b></p>
                   <ol id="textNormal">
