--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
 														Center
 														</h5>
 														<div><span class="timeline__period"><i class="far fa-clock"></i>
-																Fev 2021 —
-																Present</span></div>
+																Aug 2019 —
+																Jan 2020</span></div>
 												</div>
 											</div>
 											<p class="timeline__description"><b>Languages:</b> Wordpress with HTML,
@@ -364,8 +364,8 @@
 													<h5 class="title title--h5 timeline__title"> Web Designer
 													</h5>
 													<div><span class="timeline__period"><i class="far fa-clock"></i>
-															2010 —
-															2013</span></div>
+															Jul 2019 —
+															Jul 2019</span></div>
 												</div>
 											</div>
 											<p class="timeline__description"><b>Languages:</b> C++<br>This week, my
@@ -642,10 +642,14 @@
 									<li class="filter__item">Category</li>
 									<li class="filter__item active" data-filter="*"><a class="filter__link active"
 											href="#filter">All</a></li>
-									<li class="filter__item" data-filter=".category-concept"><a class="filter__link"
+									<li class="filter__item" data-filter=".category-software"><a class="filter__link"
 											href="#filter">Software</a></li>
-									<li class="filter__item" data-filter=".category-design"><a class="filter__link"
-											href="#filter">Web</a></li>
+									<li class="filter__item" data-filter=".category-embedded"><a class="filter__link"
+											href="#filter">Embedded Systems</a></li>
+											<li class="filter__item" data-filter=".category-web"><a class="filter__link"
+													href="#filter">Web</a></li>
+													<li class="filter__item" data-filter=".category-others"><a class="filter__link"
+															href="#filter">Others</a></li>
 
 								</ul>
 								<input type="hidden" name="changemetoo" />
@@ -654,57 +658,175 @@
 							<!-- Content -->
 							<div class="gallery-grid js-masonry js-filter-container d-flex flex-wrap">
 								<div class="gutter-sizer"></div>
-								<!-- Item 1 -->
-								<article class="news-item box gallery-grid__item category-design category-concept">
+								<!-- WAREHOUSE MANAGER -->
+								<article class="news-item box gallery-grid__item category-software category-web" id="warehouseManager">
 									<div class="news-item__image-wrap overlay overlay--45">
-										<div class="news-item__date">2021</div>
-										<a class="news-item__link" href=""></a>
-										<img class="cover lazyload" src="assets/img/clock-131964752516628239_512.png"
+										<div class="news-item__date"><i class="far fa-clock"></i> 2020</div>
+										<a class="news-item__link" href="projects/warehouse_manager.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/warehouse2.PNG"
 											alt="" />
 									</div>
 									<div class="news-item__caption">
-										<h5 class="title title--h5">Coming Soon...</h5>
-										<p> </p>
+										<h5 class="title title--h5">Warehouse Manager</h5>
+										<p class="news-item__language"> Java | HTML | PHP | Javascript | SQL</p>
+									</div>
+								</article>
+								
+								<!-- WAREHOUSE MANAGER -->
+								<article class="news-item box gallery-grid__item category-software category-web" id="warehouseManager">
+									<div class="news-item__image-wrap overlay overlay--45">
+										<div class="news-item__date"><i class="far fa-clock"></i> 2020</div>
+										<a class="news-item__link" href="projects/mes.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/mes.PNG"
+											alt="" />
+									</div>
+									<div class="news-item__caption">
+										<h5 class="title title--h5" data-toggle="tooltip" data-placement="left"
+										title="Manufacturing Execution System">MES</H6></h5>
+										<p class="news-item__language"> Java | HTML | PostgreSQL</p>
 									</div>
 								</article>
 
-								<!-- Item 2 -->
-								<!--<article class="news-item box gallery-grid__item category-design">
+								<!-- LINE FOLLOWER -->
+								<article class="news-item box gallery-grid__item category-embedded" id="lineFollower">
 									<div class="news-item__image-wrap overlay overlay--45">
-										<div class="news-item__date">Sep 16, 2019</div>
-										<a class="news-item__link" href="single-post.html"></a>
-										<img class="cover lazyload" src="assets/img/picture-1.png" alt="" />
+										<div class="news-item__date"><i class="far fa-clock"></i> 2018</div>
+										<a class="news-item__link" href="projects/line_follower.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/followLine.jpg"
+											alt="" />
 									</div>
 									<div class="news-item__caption">
-										<h5 class="title title--h5">Design Conferences in 2019</h5>
-										<p>Veritatis </p>
+										<h5 class="title title--h5">Line Follower Robot</h5>
+										<p class="news-item__language"> C | Android</p>
 									</div>
-								</article>-->
+								</article>
 
-								<!-- Item 3 -->
-								<!--<article class="news-item box gallery-grid__item category-design">
+								<!-- COMPUTER GRAPHICS -->
+								<article class="news-item box gallery-grid__item category-software" id="lineFollower">
 									<div class="news-item__image-wrap overlay overlay--45">
-										<div class="news-item__date">Sep 16, 2019</div>
-										<a class="news-item__link" href="single-post.html"></a>
-										<img class="cover lazyload" src="assets/img/picture-1.png" alt="" />
+										<div class="news-item__date"><i class="far fa-clock"></i> 2020</div>
+										<a class="news-item__link" href="projects/computer_graphics.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/graphic.PNG"
+											alt="" />
 									</div>
 									<div class="news-item__caption">
-										<h5 class="title title--h5">Design Conferences in 2019</h5>
-										<p>Veritatis </p>
+										<h5 class="title title--h5">Computer Graphics</h5>
+										<p class="news-item__language"> Javascript - OpenGl</p>
 									</div>
-								</article>-->
+								</article>
 
-								<!--<article class="news-item box gallery-grid__item category-design">
+								<!-- SNAKE GAME -->
+								<article class="news-item box gallery-grid__item category-software" id="lineFollower">
 									<div class="news-item__image-wrap overlay overlay--45">
-										<div class="news-item__date">Sep 16, 2019</div>
-										<a class="news-item__link" href="single-post.html"></a>
-										<img class="cover lazyload" src="assets/img/picture-1.png" alt="" />
+										<div class="news-item__date"><i class="far fa-clock"></i> 2017</div>
+										<a class="news-item__link" href="projects/snake_game.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/snake.png"
+											alt="" />
 									</div>
 									<div class="news-item__caption">
-										<h5 class="title title--h5">Design Conferences in 2019</h5>
-										<p>Veritatis </p>
+										<h5 class="title title--h5">Snake Game</h5>
+										<p class="news-item__language"> C++</p>
 									</div>
-								</article>-->
+								</article>
+
+								<!-- HYDROPONIC GREENHOUSE -->
+								<article class="news-item box gallery-grid__item category-software category-web" id="lineFollower">
+									<div class="news-item__image-wrap overlay overlay--45">
+										<div class="news-item__date"><i class="far fa-clock"></i> 2019</div>
+										<a class="news-item__link" href="projects/hydroponic_greenhouse.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/hydroponic.PNG"
+											alt="" />
+									</div>
+									<div class="news-item__caption">
+										<h5 class="title title--h5">Hydroponic Greenhouse</h5>
+										<p class="news-item__language"> C | HTML | Javascript | SQL</p>
+									</div>
+								</article>
+
+								<!-- PRODUCTION LINE -->
+								<article class="news-item box gallery-grid__item category-others" id="lineFollower">
+									<div class="news-item__image-wrap overlay overlay--45">
+										<div class="news-item__date"><i class="far fa-clock"></i> 2019</div>
+										<a class="news-item__link" href="projects/production_line.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/plc.PNG"
+											alt="" />
+									</div>
+									<div class="news-item__caption">
+										<h5 class="title title--h5">Production Line Control</h5>
+										<p class="news-item__language"> IEC 61131-3</p>
+									</div>
+								</article>
+
+								<!-- PRODUCTION LINE -->
+								<article class="news-item box gallery-grid__item category-embedded category-software" id="lineFollower">
+									<div class="news-item__image-wrap overlay overlay--45">
+										<div class="news-item__date"><i class="far fa-clock"></i> 2019</div>
+										<a class="news-item__link" href="projects/smart_controller.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/smart.PNG"
+											alt="" />
+									</div>
+									<div class="news-item__caption">
+										<h5 class="title title--h5">Smart Controller</h5>
+										<p class="news-item__language"> C++</p>
+									</div>
+								</article>
+
+								<!-- PRODUCTION LINE -->
+								<article class="news-item box gallery-grid__item category-software" id="lineFollower">
+									<div class="news-item__image-wrap overlay overlay--45">
+										<div class="news-item__date"><i class="far fa-clock"></i> 2019</div>
+										<a class="news-item__link" href="projects/tic_tac_toe.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/tic2.png"
+											alt="" />
+									</div>
+									<div class="news-item__caption">
+										<h5 class="title title--h5">Tic Tac Toe</h5>
+										<p class="news-item__language"> Java</p>
+									</div>
+								</article>
+
+								<!-- PRODUCTION LINE -->
+								<article class="news-item box gallery-grid__item category-web" id="lineFollower">
+									<div class="news-item__image-wrap overlay overlay--45">
+										<div class="news-item__date"><i class="far fa-clock"></i> 2019</div>
+										<a class="news-item__link" href="projects/therapy_center.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/website1.png"
+											alt="" />
+									</div>
+									<div class="news-item__caption">
+										<h5 class="title title--h5">Therapy Center Website</h5>
+										<p class="news-item__language"> Wordpress</p>
+									</div>
+								</article>
+
+								<!-- PRODUCTION LINE -->
+								<article class="news-item box gallery-grid__item category-software" id="lineFollower">
+									<div class="news-item__image-wrap overlay overlay--45">
+										<div class="news-item__date"><i class="far fa-clock"></i> 2020</div>
+										<a class="news-item__link" href="projects/instagram_bot.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/instabot.png"
+											alt="" />
+									</div>
+									<div class="news-item__caption">
+										<h5 class="title title--h5">Instagram Bot</h5>
+										<p class="news-item__language"> Python (Selenium)</p>
+									</div>
+								</article>
+
+								<!-- PRODUCTION LINE -->
+								<article class="news-item box gallery-grid__item category-others" id="lineFollower">
+									<div class="news-item__image-wrap overlay overlay--45">
+										<div class="news-item__date"><i class="far fa-clock"></i> 2019</div>
+										<a class="news-item__link" href="projects/license_plate.html"></a>
+										<img class="cover lazyload" src="assets/img/projects/sbvi.jpg"
+											alt="" />
+									</div>
+									<div class="news-item__caption">
+										<h5 class="title title--h5">License Plate Recognition</h5>
+										<p class="news-item__language"> Matlab</p>
+									</div>
+								</article>
+
 
 							</div>
 						</div>
