--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 								</li>
 							</ul>
 							<!--DARK THEME -->
-							<h5>Dark Theme</h5>
-							<label class="switch">
+							<h5 class="d-inline title title--h5">Dark Theme</h5>
+							<label class="switch ">
 								<input type="checkbox">
 								<span class="slider round"></span>
 							</label>
