--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 						</div>
 						<div class="">
 							<h2 class="title title--h3">Hobbies</h2>
-							<div class="swiper-container js-carousel-clients" data-aos="fade-in">
+							<div class="swiper-container js-carousel-clients" data-aos="fade-in" >
 								<div class="swiper-wrapper">
 
 									<!-- Item client -->
@@ -229,7 +229,7 @@
 										<!-- Item -->
 										<article class="timeline__item" data-aos="fade-up">
 											<div class="d-flex flex-row">
-												<img class="logo-exp" src="assets/img/education/feupLogo.jpg" alt="" />
+												<img class="logo-exp" src="assets/img/education/feupLogo.PNG" alt="" />
 												<div class="d-flex flex-column ml-2">
 													<h5 class="title title--h5 timeline__title"><a>Faculty of
 															Engineering of the University of Porto</a>
@@ -276,7 +276,7 @@
 										<!-- FEUP -->
 										<article class="timeline__item" data-aos="fade-up">
 											<div class="d-flex flex-row">
-												<img class="logo-exp" src="assets/img/experience/feupLogo.jpg" alt="" />
+												<img class="logo-exp" src="assets/img/experience/feupLogo.png" alt="" />
 												<div class="d-flex flex-column ml-2">
 													<h5 class="title title--h5 timeline__title">Teaching
 														Assistant
@@ -302,7 +302,7 @@
 										<!-- ABYSSAL -->
 										<article class="timeline__item" data-aos="fade-up">
 											<div class="d-flex flex-row">
-												<img class="logo-exp" src="assets/img/experience/abyssalLogo.png"
+												<img class="logo-exp" src="assets/img/experience/abyssalLogo2.png"
 													alt="" />
 												<div class="d-flex flex-column ml-2">
 													<h5 class="title title--h5 timeline__title"> MSc Thesis -
@@ -329,7 +329,7 @@
 										<!-- THERAPY -->
 										<article class="timeline__item" data-aos="fade-up">
 											<div class="d-flex flex-row">
-												<img class="logo-exp" src="assets/img/experience/therapyLogo.png"
+												<img class="logo-exp" src="assets/img/experience/therapyLogo2.png"
 													alt="" />
 												<div class="d-flex flex-column ml-2">
 													<h5 class="title title--h5 timeline__title"> Front End
@@ -360,7 +360,7 @@
 										<!-- CRITICAL -->
 										<article class="timeline__item" data-aos="fade-up">
 											<div class="d-flex flex-row">
-												<img class="logo-exp" src="assets/img/experience/criticalLogo.png"
+												<img class="logo-exp" src="assets/img/experience/criticalLogo2.png"
 													alt="" />
 												<div class="d-flex flex-column ml-2">
 													<h5 class="title title--h5 timeline__title"> Web Designer
@@ -416,7 +416,7 @@
 
 										<!-- Case Item -->
 										<div class="case-item box box__second" data-aos="fade-in" data-aos-delay="200">
-											<img class="case-item__icon" src="assets/img/courses/google.png" alt="" />
+											<img class="case-item__icon" src="assets/img/courses/google2.png" alt="" />
 											<div>
 												<h3 class="title title--h5"><a href="" class="custom_link">Digital
 														Marketing</a></h3>
@@ -429,7 +429,7 @@
 
 										<!-- Case Item -->
 										<div class="case-item box box__second" data-aos="fade-in" data-aos-delay="300">
-											<img class="case-item__icon" src="assets/img/courses/udemy.png" alt="" />
+											<img class="case-item__icon" src="assets/img/courses/udemy2.png" alt="" />
 											<div>
 												<h3 class="title title--h5"><a href="" class="custom_link">The Complete
 														Python Course | Learn Python by Doing</a></h3>
@@ -440,7 +440,7 @@
 										</div>
 										<!-- Case Item -->
 										<div class="case-item box box__second" data-aos="fade-in" data-aos-delay="400">
-											<img class="case-item__icon" src="assets/img/courses/udemy.png" alt="" />
+											<img class="case-item__icon" src="assets/img/courses/udemy2.png" alt="" />
 											<div>
 												<h3 class="title title--h5"><a href="" class="custom_link">Java
 														Programming Masterclass for Software Developers</a></h3>
