--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 										<!-- Item -->
 										<article class="timeline__item" data-aos="fade-up">
 											<div class="d-flex flex-row">
-												<img class="logo-exp" src="assets/img/education/feupLogo.PNG" alt="" />
+												<img class="logo-exp" src="assets/img/education/feupLogo.png" alt="" />
 												<div class="d-flex flex-column ml-2">
 													<h5 class="title title--h5 timeline__title"><a>Faculty of
 															Engineering of the University of Porto</a>
